stop group buttons to linebreak when text too long

--- a/frontend/src/app/stories-bar/stories-bar.component.css
+++ b/frontend/src/app/stories-bar/stories-bar.component.css
@@ -124,6 +124,14 @@
     transition: 0.1s;
     display: block;
     white-space: nowrap;
+    position: relative;
+  }
+  .groupLinkList{
+    position: absolute;
+  }
+  .groupIconSpan{
+    white-space: nowrap;
+    float: right;
   }
   #groupEdit{
     float: right;
